<resources>
    <string name="app_details">"Copyright © 2011–2020 – Chainfire
Twitter: @ChainfireXDA
Tap to visit XDA thread"</string>
    <string name="app_name">CF.lumen</string>
    <string name="app_website_url">http://forum.xda-developers.com/showthread.php?p=51779367</string>
    <string name="brightness_auto">Automatic brightness</string>
    <string name="brightness_darken">Darken filter</string>
    <string name="brightness_enable">Adjust brightness</string>
    <string name="brightness_menu">Brightness</string>
    <string name="brightness_notice">For consistent results, if you configure brightness to be adjusted for <i>one</i> filter, you should configure it for <i>all three</i> (day, sundown, and sleep) filters</string>
    <string name="calibrate_bright">Bright</string>
    <string name="calibrate_bright_description">On or above this value day mode will be activated</string>
    <string name="calibrate_current">Current</string>
    <string name="calibrate_dark">Dark</string>
    <string name="calibrate_dark_description">On or below this value sleep mode will be activated</string>
    <string name="calibrate_wake">Wake</string>
    <string name="calibrate_wake_description">On or above this value sundown mode will be activated, if in sleep mode</string>
    <string name="cflumen_driver_detect_compatibility">If the screen just turned red, it is likely <i>Compatibility</i> mode is the best performing mode.</string>
    <string name="cflumen_driver_detect_description">Attempt to determine if <i>Compatibility</i> or <i>Performance</i> mode is faster</string>
    <string name="cflumen_driver_detect_performance">If the screen just turned red, it is likely <i>Performance</i> mode is the best performing mode.</string>
    <string name="cflumen_driver_detect_title">Driver: CF.lumen: Determine best mode</string>
    <string name="cflumen_driver_detect_unknown">It could not be determined which driver mode is likely to be the best performing one.</string>
    <string name="cflumen_driver_detecting">Detecting capabilities</string>
    <string name="cflumen_driver_failure">The advanced CF.lumen driver could not be loaded. For stability reasons, a reboot is now recommended!</string>
    <string name="cflumen_driver_loading">Loading advanced CF.lumen driver</string>
    <string name="channel_service">Service running</string>
    <string name="channel_service_low">Service running (low priority)</string>
    <string name="channel_update">Update required</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="day_of_week_label_typeface">sans-serif-light</string>
    <string name="day_picker_description">Month grid of days</string>
    <string name="deleted_key">%1$s deleted</string>
    <string name="detecting_location">Detecting location …</string>
    <string name="detecting_location_failed">Could not detect location!</string>
    <string name="dialog_brightness_title">Select brightness</string>
    <string name="dialog_calibrate_title">Select adjustment</string>
    <string name="dialog_colorblind_title">Enhance for …</string>
    <string name="dialog_gray_notice">"0.000 equals grayscale
1.000 equals full saturation"</string>
    <string name="dialog_kelvin_title">Select temperature</string>
    <string name="dialog_rgb_title">Select adjustment</string>
    <string name="dialog_secure_question">Is the square below the color green?</string>
    <string name="donate_popup_description">Please consider upgrading to <b>CF.lumen Pro</b>! It supports my developments, removes all nags, and adds convenient notification, startup and remote control features!</string>
    <string name="donate_popup_title">Upgrade</string>
    <string name="done_label">Done</string>
    <string name="driver_update_needed">Driver update needed!</string>
    <string name="error_not_rooted">Could not acquire root access. <b>CF.lumen</b> is defaulting to <b>rootless</b>" operation. We won't look nearly as good as with root, and not all features will be available, but it's better than nothing!"</string>
    <string name="error_not_rooted_29">Could not acquire root access. Unfortunately, <b>CF.lumen</b> does not support <b>rootless</b> operation on Android 10+.</string>
    <string name="error_notification_icon_29">This feature generally does not work on Android 10 or newer. It is recommended to keep it set to <i>Always</i>.</string>
    <string name="error_notifications">If you change this setting to anything other than <i>Always</i>, Android may stop <b>CF.lumen</b>"'s background service at any time, causing the app to stop working.

Alternatively, you can make the notification invisible by deselecting "<i>Settings -> Apps -> CF.lumen -> Show Notifications</i>.</string>
    <string name="error_uninstall">The <i>old</i>" CF.lumen needs to be uninstalled and the device rebooted before continuing. Uninstall normally, or through a custom recovery? If you don't know, select "<i>Normal</i>.</string>
    <string name="error_update_reboot">The <b>CF.lumen</b> driver needs to be updated. Please reboot your device.</string>
    <string name="fade_sensor">Sensor</string>
    <string name="fade_sleep">Sleep</string>
    <string name="fade_sunrise">Sunrise</string>
    <string name="fade_sunset">Sunset</string>
    <string name="filter_amber_description_cflumen" formatted="false">Display luminance in 100% red and 75% green</string>
    <string name="filter_amber_description_kcal" formatted="false">Display 100% of the red and 75% of the green channel</string>
    <string name="filter_amber_description_pccrgb" formatted="false">Display 100% of the red and 75% of the green channel</string>
    <string name="filter_amber_description_rootless">Amber overlay</string>
    <string name="filter_amber_title">Amber</string>
    <string name="filter_auto_description_cflumen">Apply color filter based on other configuration options</string>
    <string name="filter_auto_description_kcal">Apply color filter based on other configuration options</string>
    <string name="filter_auto_description_pccrgb">Apply color filter based on other configuration options</string>
    <string name="filter_auto_description_rootless">Apply color filter based on other configuration options</string>
    <string name="filter_auto_title">Automatic</string>
    <string name="filter_blue_description_cflumen">Display luminance in the blue channel only</string>
    <string name="filter_blue_description_kcal">Display blue channel only</string>
    <string name="filter_blue_description_pccrgb">Display blue channel only</string>
    <string name="filter_blue_description_rootless">Increase blue channel prominence</string>
    <string name="filter_blue_title">Blue</string>
    <string name="filter_colorblind_description_cflumen">Enhance display for colorblindness (experimental)</string>
    <string name="filter_colorblind_description_kcal">KCAL driver does not support this filter</string>
    <string name="filter_colorblind_description_pccrgb">PCC/RGB driver does not support this filter</string>
    <string name="filter_colorblind_description_rootless">Rootless driver does not support this filter</string>
    <string name="filter_colorblind_deuter">Deuteranopia/anomaly</string>
    <string name="filter_colorblind_notice">Please note this option is actually an <i>experimental</i> feature of Android itself - <b>CF.lumen</b> only switches it on and off for you.</string>
    <string name="filter_colorblind_pro">Protanopia/anomaly</string>
    <string name="filter_colorblind_title">Colorblindness</string>
    <string name="filter_colorblind_tri">Tritanopia/anomaly</string>
    <string name="filter_disabled_description_cflumen">Do not apply any color filter</string>
    <string name="filter_disabled_description_kcal">Do not apply any color filter</string>
    <string name="filter_disabled_description_pccrgb">Do not apply any color filter</string>
    <string name="filter_disabled_description_rootless">Do not apply any color filter</string>
    <string name="filter_disabled_title">Disabled</string>
    <string name="filter_gray_description_cflumen">Display luminance in all channels</string>
    <string name="filter_gray_description_kcal">Display luminance in all channels</string>
    <string name="filter_gray_description_pccrgb">PCC/RGB driver does not support this filter</string>
    <string name="filter_gray_description_rootless">Rootless driver does not support this filter</string>
    <string name="filter_gray_title">Grayscale/Saturation</string>
    <string name="filter_green_description_cflumen">Display luminance in the green channel only</string>
    <string name="filter_green_description_kcal">Display green channel only</string>
    <string name="filter_green_description_pccrgb">Display green channel only</string>
    <string name="filter_green_description_rootless">Increase green channel prominence</string>
    <string name="filter_green_title">Green</string>
    <string name="filter_invert_description_cflumen">Invert colors</string>
    <string name="filter_invert_description_kcal">Invert colors</string>
    <string name="filter_invert_description_pccrgb">PCC/RGB driver does not support this filter</string>
    <string name="filter_invert_description_rootless">Rootless driver does not support this filter</string>
    <string name="filter_invert_title">Invert</string>
    <string name="filter_kelvin_description_cflumen">Adjust color temperature</string>
    <string name="filter_kelvin_description_kcal">Adjust color temperature</string>
    <string name="filter_kelvin_description_pccrgb">Adjust color temperature</string>
    <string name="filter_kelvin_description_rootless">Adjust color temperature</string>
    <string name="filter_kelvin_title">Temperature</string>
    <string name="filter_red_description_cflumen">Display luminance in the red channel only</string>
    <string name="generic_cancel">Cancel</string>
    <string name="generic_save">Save</string>
    <string name="settings_location_follow_title">Auto-update location</string>
</resources>