<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center|left" android:id="@id/labelCurrent1" android:layout_width="0.0px" android:layout_height="wrap_content" android:text="@string/calibrate_current" android:layout_weight="1.0" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center|right" android:id="@id/labelCurrent2" android:layout_width="0.0px" android:layout_height="wrap_content" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:paddingTop="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center|left" android:id="@id/labelDark1" android:layout_width="30.0pt" android:layout_height="fill_parent" android:text="@string/calibrate_dark" />
        <View android:layout_width="@dimen/activity_horizontal_margin" android:layout_height="fill_parent" />
        <SeekBar android:id="@id/sliderDark" android:layout_width="0.0px" android:layout_height="wrap_content" android:minHeight="36.0dip" android:layout_weight="1.0" />
        <View android:layout_width="@dimen/activity_horizontal_margin" android:layout_height="fill_parent" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center|right" android:id="@id/labelDark2" android:layout_width="20.0pt" android:layout_height="fill_parent" android:text="000" />
    </LinearLayout>
    <TextView android:textAppearance="?android:textAppearanceSmall" android:gravity="center" android:id="@id/labelDarkDescription" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/calibrate_dark_description" />
    <LinearLayout android:orientation="horizontal" android:paddingTop="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center|left" android:id="@id/labelWake1" android:layout_width="30.0pt" android:layout_height="fill_parent" android:text="@string/calibrate_wake" />
        <View android:layout_width="@dimen/activity_horizontal_margin" android:layout_height="fill_parent" />
        <SeekBar android:id="@id/sliderWake" android:layout_width="0.0px" android:layout_height="wrap_content" android:minHeight="36.0dip" android:layout_weight="1.0" />
        <View android:layout_width="@dimen/activity_horizontal_margin" android:layout_height="fill_parent" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center|right" android:id="@id/labelWake2" android:layout_width="20.0pt" android:layout_height="fill_parent" android:text="000" />
    </LinearLayout>
    <TextView android:textAppearance="?android:textAppearanceSmall" android:gravity="center" android:id="@id/labelWakeDescription" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/calibrate_wake_description" />
    <LinearLayout android:orientation="horizontal" android:paddingTop="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center|left" android:id="@id/labelBright1" android:layout_width="30.0pt" android:layout_height="fill_parent" android:text="@string/calibrate_bright" />
        <View android:layout_width="@dimen/activity_horizontal_margin" android:layout_height="fill_parent" />
        <SeekBar android:id="@id/sliderBright" android:layout_width="0.0px" android:layout_height="wrap_content" android:minHeight="36.0dip" android:layout_weight="1.0" />
        <View android:layout_width="@dimen/activity_horizontal_margin" android:layout_height="fill_parent" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center|right" android:id="@id/labelBright2" android:layout_width="20.0pt" android:layout_height="fill_parent" android:text="000" />
    </LinearLayout>
    <TextView android:textAppearance="?android:textAppearanceSmall" android:gravity="center" android:id="@id/labelBrightDescription" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/calibrate_bright_description" />
</LinearLayout>