<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBox android:textAppearance="?android:textAppearanceMedium" android:id="@id/checkEnable" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/brightness_enable" />
    <View android:layout_width="fill_parent" android:layout_height="@dimen/activity_vertical_margin" />
    <View android:layout_width="fill_parent" android:layout_height="@dimen/activity_vertical_margin" />
    <CheckBox android:textAppearance="?android:textAppearanceMedium" android:id="@id/checkAuto" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/brightness_auto" />
    <LinearLayout android:orientation="horizontal" android:paddingTop="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <SeekBar android:id="@id/slider" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="36.0dip" android:layout_weight="1.0" />
        <View android:layout_width="@dimen/activity_horizontal_margin" android:layout_height="fill_parent" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center|right" android:id="@id/label" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="0.000" />
    </LinearLayout>
    <View android:layout_width="fill_parent" android:layout_height="@dimen/activity_vertical_margin" />
    <View android:layout_width="fill_parent" android:layout_height="@dimen/activity_vertical_margin" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/brightness_darken" />
    <LinearLayout android:orientation="horizontal" android:paddingTop="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <SeekBar android:id="@id/slider_darken" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minHeight="36.0dip" android:layout_weight="1.0" />
        <View android:layout_width="@dimen/activity_horizontal_margin" android:layout_height="fill_parent" />
        <TextView android:textAppearance="?android:textAppearanceMedium" android:gravity="center|right" android:id="@id/label_darken" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="0.000" />
    </LinearLayout>
</LinearLayout>